k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: collabora-app
  name: collabora
  namespace: collabora-app
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  selector:
    matchLabels:
      app: collabora-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: collabora-app
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: collabora-env
            optional: false
        image: <COLLABORA_CODE_DOCKER_IMAGE:TAG>
        imagePullPolicy: Always
        name: collabora
        ports:
        - containerPort: 9980
          name: 9980tcp02
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - MKNOD
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: collabora-app
spec:
  ports:
  - name: 9980tcp2
    port: 9980
    protocol: TCP
    targetPort: 9980
  selector:
    app: collabora-app
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/server-alias: '*.my.domain'
    nginx.ingress.kubernetes.io/upstream-hash-by: $arg_WOPISrc # NGINX load balancing based on URL parameter "WOPISrc" for sticky sessions
  name: collabora-load-balancer
  namespace: collabora-app
spec:
  rules:
  - host: hostname.my.domain # Collabora hostname, must be configured on Owncloud/Nextcloud
    http:
      paths:
      - backend:
          serviceName: collabora
          servicePort: 9980
  tls:
  - hosts:
    - hostname.my.domain
    secretName: a-secret-certificate # certificate/key secret name for the domain (optional)
